# headroom

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
examples/: basic_chat.py
src/headroom/: __init__.py
src/headroom/cli/: main.py
src/headroom/core/: __init__.py  budget.py  message.py  pricing.py  session.py
src/headroom/counting/: counter.py
src/headroom/dashboard/: app.py  state.py
src/headroom/dashboard/routes/: api.py  views.py
src/headroom/dashboard/templates/: base.html  index.html
src/headroom/dashboard/templates/partials/: budget_bar.html  message_list.html  message_pair.html  strategy_card.html  strategy_panel.html
src/headroom/strategies/: __init__.py  base.py  budget.py  cache.py  relevance.py  summarizer.py
tests/: conftest.py
tests/integration/: test_dashboard.py
tests/unit/: test_budget.py  test_cache.py  test_relevance.py  test_session.py  test_summarizer.py
